# synapse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/app/: AndroidManifest.xml  Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/ui/: app.slint
crates/relay/: Cargo.toml
crates/relay/src/: main.rs  registry.rs
crates/server/: Cargo.toml
crates/server/src/: claude.rs  history.rs  http.rs  main.rs  manager.rs  relay.rs  tls.rs  tunnel.rs
mobile/: build-android.sh  build-ios.sh
mobile/ios/Sources/: AppDelegate.h  AppDelegate.mm  Info.plist  main.m
mobile/ios/Synapse.xcodeproj/: project.pbxproj
public/: app.js  md.js
src/: index.js
src/server/: server.js
web/: AGENTS.md  package.json
web/public/: app.css  app.js  index.html  manifest.json
web/src/bridge/: claude-bridge.js  history.js
web/src/server/: attach.js  server.js  session-manager.js
